fix: test decided the correct line to follow